[package]
name = "random-verse"
version = "0.1.0"
edition = "2021"
description = "A random scripture verse for each day"

[lib]
crate-type = ["cdylib"]

[dependencies]
shuttle-service = { version = "0.5.2", features = ["web-rocket"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde_json = "1"
serde = {version = "1", features = ["derive"] }
time = "0.3"
time-tz = "1"
