[package]
name = "random-verse"
version = "0.1.0"
edition = "2021"
description = "A random scripture verse for each day"

[dependencies]
shuttle-rocket = "0.18"
shuttle-runtime = "0.18"
tokio = "1"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde_json = "1"
serde = {version = "1", features = ["derive"] }
time = "0.3"
time-tz = "1"
